lab1/Test/L1-A-12-83.output
Error Type A at Line 2
Error Type B at Line 7
Error Type B at Line 26
Error Type A at Line 41
Error Type A at Line 43
Error Type A at Line 48
Error Type B at Line 55
