lab1/Test/L1-A-12-83.cmm
int wVE3UPWku3nt ( ) {
  struct P1zjzzh1yNe \h8el = aRp1Y813Ws5JKl7lDnU , 
    S2x0Ffd1PRCYwFece [ 1046952941 ] ;
  return N4kz6_roP = YtTme9w52xBqcslzwE || XJBjU7U 
    && aWqoO4xYsaB97imltdGC < ku0Ccgah8OSDbJTG3C + - VZA_ 
    ( vc56c0XfSx7QvPTr32SK = m9Uf8oj <= LrkAEX3iZsiplNQ 
    / ! bbTHCkDWg33D9yXaqGo [ W8w5BixfHud3WqeY = || b 
    == fQi7yrBlf9v4z5T2fj2h - - ! ! - ( QERFAIVsE > nFEijLj0PC393yb 
    * ( UBeBPjdRdsfxEHc != G8UtkhanZtv / dEq8Waj [ kR14 
    >= Yy8OLwmUB - xjXKaqxWUv_Pa [ Ews || RVmB && w05swv9eAocvFP8s 
    - ( fupWPAR * ( z || ISOvroY07tMxG6I - paX * - ( Bjey0 
    = djfQro && mKx_fvYzvKhN <= xiRh1 * m6SO5mSLEf [ dRraHgQtxVRrCF8Ygtz0 
    * eqzCe7ud6AxbBT9 [ U3rIPOPyBGqMh && AuCamQ / - ( 
    J7B ( lqittmZbsyj , orhZmRnw8 ) ) . TgRAXmWpu4EbA 
    ] > tZH5SZycC67mAeYt ] / sQJhllwfApHi ) ) * R5Ct1BQrMISuxuHuLsd 
    ) ] ] ) / - SxAM5IOfIE0 ) * 1805596901.1363264847 
    * V6tj1p2ECQuhhPv . O8UMnY2PBxqwLzH11T ] * u5IMPlHp9Gk5Er 
    ( ) . fxKP8q ) / ! 2030181294 ;
}
float vxKdxxmqVSQBmxOe 
;
int ;
int ;
struct ksrtwW3 {
  struct LDvfZpmy Mi8OpZNgi 
};
int kmFIP , y0YJaD 

;
struct D5aJo0EdXYn ;
struct is7jkAub8 YzA4RbMG 
;
struct Gf ;
int ;
int ;
int ;
int ;
int ;
int ;
int ;
int ;~
int ;
int b ( int fbe9uvaaPUM9px0 , int H1OHA4qJe3W %) {
  if ( nBsGN3sBoe9kcH )   if ( S6bg )   RkpvQSYG_j 
    ;
else {
  }
else   if ( TZEa2 )   if ( XKV9Rpl7 ~)   while ( tI3wbX_YhRiQqp 
    )   zSO ;




}
struct int xPkLHu7a8qknQD8Z ;
int pXgbY5Pr5xh1W ;
};
int ;
